<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".ui.post.PostEditActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/mLinearLayout_Post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingEnd="30dp"
            android:paddingStart="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_photo"
                android:textSize="16sp" />


            <ImageView
                android:id="@+id/imageview_pet_post"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/agregar_mascotas" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tip_of_pet"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonDog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dog" />

                <RadioButton
                    android:id="@+id/radioButtonCat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cat" />

                <RadioButton
                    android:id="@+id/radioButtonOther"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/others" />

            </RadioGroup>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_pet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_name_pet"
                    android:inputType="textPersonName"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_pet_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="@string/et_description"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:scrollbars="vertical"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female" />
            </RadioGroup>

            <com.google.android.gms.maps.MapView
                xmlns:map="http://schemas.android.com/apk/res-auto"
                android:id="@+id/map_post"
                android:name="com.google.android.gmd.maps.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                map:uiScrollGestures="false"
                map:uiZoomGestures="false"/>

            <Button
                android:id="@+id/btn_save_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_login_background"
                android:elevation="4dp"
                android:text="@string/btn_guardar"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/progress_bar_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:visibility="invisible" />


        </LinearLayout>

    </ScrollView>
</LinearLayout>