<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileEditActivity">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <LinearLayout
        android:id="@+id/mLinearLayout_Profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_view_ProfileEdit"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/add_account"
            android:clickable="true"
            android:focusable="true"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_name"
                android:inputType="textPersonName"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_email"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_profile_contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_numero"
                android:inputType="number"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_save_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login_background"
            android:elevation="4dp"
            android:text="@string/btn_guardar"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textAllCaps="false"/>

        <ProgressBar
            android:id="@+id/progress_bar_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

    </LinearLayout>



</LinearLayout>